<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="0dp">
    

    
    <TextView 
        android:id="@+id/textViewManualInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/input_code" /> 
        
    <EditText 
        android:id="@+id/editTextManualInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/textViewManualInput"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_manual_input"/>
    
    <Button
        android:id="@+id/buttonRequestCodeInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextManualInput"
       	android:background="#AA4630"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true" 
        android:text="@string/request" />
    
    
    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:background="#222222"
        android:textColor="#FFFFFF"
        android:text="@string/copyright_information" />
    
    
    
    
    
    
</RelativeLayout>
