<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="0dp">
    

    
    <TextView 
        android:id="@+id/textViewServerAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/input_server_address" /> 
        
    <EditText 
        android:id="@+id/editTextServerAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/textViewServerAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_input_server_address"/>
    
        
    <TextView 
        android:id="@+id/textViewCurrentServerAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextServerAddress"
       	android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="" /> 
    
    <Button
        android:id="@+id/buttonUpdateServerAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCurrentServerAddress"
       	android:background="#AA4630"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true" 
        android:text="@string/modify" />
     <Button
        android:id="@+id/ipdelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUpdateServerAddress"
       	android:background="#AA4630"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true" 
        android:text="刪除" />
    
    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:background="#222222"
        android:textColor="#FFFFFF"
        android:text="@string/copyright_information" />
    
    
    
    
    
    
</RelativeLayout>
